# projective_simulation

./: pyproject.toml
nbs/: _quarto.yml
nbs/lib_nbs/: 04_ECMs.ipynb
nbs/lib_nbs/ECMs/: 01_core.ipynb  02_priming.ipynb  03_state_estimators.ipynb
nbs/lib_nbs/agents/: foraging_agents.ipynb
nbs/lib_nbs/envs/: 01_core.ipynb  POMDPs.ipynb  factorized_POMDPs.ipynb
nbs/lib_nbs/methods/: 01_transforms.ipynb  02_lib_helpers.ipynb  03_visualizations.ipynb  04_samplers.ipynb
nbs/tutorials/: index_tutorials.ipynb
nbs/tutorials/applications/foraging/: 01_learning_to_forage.ipynb
nbs/tutorials/contributing/: 00_contributing.ipynb
nbs/tutorials/learning_ps/: 01_Memory_Based_State_Estimators.ipynb
projective_simulation/: _modidx.py  agents.py  contributing_guide.py
projective_simulation/ECMs/: core.py  priming.py  state_estimators.py
projective_simulation/agents/: core.py  foraging.py
projective_simulation/envs/: POMDPs.py  core.py  factorized_POMDPs.py  foraging.py
projective_simulation/methods/: lib_helpers.py  preprocessors.py  samplers.py  transforms.py  visualization.py
